tests/NormalTests/paczka1/fuzzy1/26354961.err
Error in line 5: 3Rsk4pbDvk A189 44,1
Error in line 12: S662 A189 34,40
Error in line 2: E5kujobZG A496 49,7
Error in line 10: 3Rsk4pbDvk S662 95,6
Error in line 20: PgQMK2ShjU A496 93,6
Error in line 37: y9ZwhedwZEt A189 66,8
Error in line 35: yNU1n A496 0,1
